--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>TimeFlex POC</title>
+    <title>Proof of Concept</title>
   </head>
   <body>
     <div id="root"></div>
